# 2026-MIXUP-AI-HACKATHON

./: .env.example  .gitignore  AGENTS_DESCRIPTION.md  DOCS.md  HITL_IMPROVEMENTS.md  PRESENTATION_STRENGTHS.md  README.md  check_env.py  check_hotel_selection.py  main.py  pyproject.toml  run_cli.py  samples.py  test_kix.py  test_naver.py
.claude/: settings.json
api/: main.py  schemas.py
api/routes/: plan.py
hotel/: hotel.py
lovable/: .gitignore  package-lock.json  vite.config.ts
lovable/.lovable/: plan.md
lovable/src/: styles.css
lovable/src/components/travel/: MarkdownContent.tsx  TravelPlannerApp.tsx
lovable/src/lib/: api.ts
lovable/src/lib/travel/: mockData.ts  types.ts
lovable/src/routes/: __root.tsx  index.tsx
src/agent/: README.md  __init__.py  graph.py  llm.py  progress.py  state.py
src/agent/nodes/: __init__.py  date_optimizer.py  intent_router.py  place_node.py  stay_node.py  synthesizer_node.py  weather_node.py
src/cheapest_date/: __init__.py  flight_crawler.py  iata.py  models.py
src/hotel/: __init__.py  models.py  search.py
src/tools/: cheapest_date_tool.py  hotel_tool.py  tourist_tool.py  transport_tools.py  weather_tool.py
src/tourist/: __init__.py  google_places.py  models.py  naver_local.py
src/transport/: __init__.py  flights.py  models.py  transit.py
src/weather/: __init__.py  config.py  display.py  forecast.py  geocoding.py  models.py
tourist/: google_api.py  main.py  naver_api.py
transport-flight/: test_transit.py  test_transport.py
transport-flight/tools/: __init__.py  google_flights.py  google_transit.py
