[project]
name = "2026-mixup-ai-hackathon"
version = "0.1.0"
description = "전세계 날씨 조회 - Open-Meteo API (API 키 불필요)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-core>=1.4.0",
    "langchain-upstage>=0.7.7",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.47.0",
]
